# raycasting

./: .gitignore  CMakeLists.txt  README.md  it.joysf.raycasting.yml
pkg/: flatpak.sh  it.joysf.raycasting.yml  linux.sh
src/: config.h  main.c  map.c  map.h
